Fixed edge labels blurred in focus mode

--- a/src/styles/focus-mode.scss
+++ b/src/styles/focus-mode.scss
@@ -7,7 +7,7 @@
     filter: blur(5px);
   }
 
-  .canvas-path-label-wrapper {
+  .canvas-path-label-wrapper > .canvas-path-label:not(.is-focused) {
     filter: blur(5px);
   }
 }
